--- a/index.html
+++ b/index.html
@@ -288,10 +288,7 @@
           <section id="about" class="tab-content active">
             <h2 class="section-title">About</h2>
         <p class="intro-text">
-          Hey there! I'm Adrian, a PhD researcher exploring how space, data, and
-          energy shape each other. I use geostatistics and large-scale spatial
-          modeling to understand how cities grow, where infrastructure
-          struggles, and how we can make urban energy systems more resilient.
+          Hey there! I'm Adrian, a PhD researcher at Georgia Tech (GT) exploring how space, data, and energy shape each other. I use geostatistics and large-scale spatial modeling to understand how cities grow, where infrastructure struggles, and how we can make urban energy systems more resilient.
         </p>
 
         <!-- Stats -->
@@ -737,8 +734,8 @@
             <h2 class="section-title">Projects</h2>
 
         <div class="item" id="campus-occupancy">
-          <div class="sub">Using Georgia Tech's WiFi data for spatio-temporal building occupancy</div>
           <h3><a href="https://campus-wifi-vue-app.netlify.app/" target="_blank" rel="noopener noreferrer">Campus Occupancy Map</a></h3>
+          <div class="sub">Spatio-temporal building occupancy using GT WiFi data</div>
           <div class="sub">Aug 2025 - Dec 2025 • Atlanta, GA</div>
           <button class="toggle-btn" onclick="toggleDetails(this)">
             More info ▼
@@ -779,8 +776,7 @@
             >
           </h3>
           <div class="sub">
-            Using Georgia Tech's WiFi data to make spatio-temporal movement
-            models
+            Using GT WiFi data to power a campus-scale student walkway congestion model
           </div>
           <div class="sub">Aug 2025 - Dec 2025 • Atlanta, GA</div>
           <button class="toggle-btn" onclick="toggleDetails(this)">
