--- a/index.html
+++ b/index.html
@@ -922,6 +922,44 @@
           <!-- Publications Tab -->
           <section id="publications" class="tab-content">
             <h2 class="section-title">Publications</h2>
+
+        <div class="item" id="district-energy">
+          <h3>
+            Transitioning District Energy Systems: Integrating Sustainable
+            Solutions for Efficient Heating
+          </h3>
+          <div class="sub">Aziz, I., Lewe, J., Qixun, L., Radio, M., Mungroo, A., Solano, D., Kim, H.</div>
+          <div class="sub">2026 ASHRAE Winter Conference</div>
+          <div class="sub">January, 2026</div>
+          <button class="toggle-btn" onclick="toggleDetails(this)">
+            More info ▼
+          </button>
+          <div class="details" style="display: none">
+            <ul>
+              <li>
+                Modeled district energy decarbonization pathways using
+                physics-based Modelica simulations to evaluate heat recovery
+                chillers and heat pumps as electrified alternatives to Georgia
+                Tech's natural gas boiler system
+              </li>
+              <li>
+                Evaluated three heat recovery scenarios (condenser-side HRCs,
+                chilled-water return HRCs, and air-source heat pumps) analyzing
+                infrastructure requirements, seasonal performance, and
+                integration with thermal energy storage under real-time
+                electricity pricing
+              </li>
+              <li>
+                Identified optimal decarbonization strategy recommending
+                chilled-water return heat recovery chillers paired with thermal
+                storage as the most effective pathway, achieving 40-80% fossil
+                fuel reduction while maintaining system reliability and economic
+                viability
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <div class="item">
           <h3>
             Leveraging Convexity on Performance Envelope to Detect and Reduce
