added awards section

--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
           <button class="tab-btn" data-tab="publications">Publications</button>
           <button class="tab-btn" data-tab="presentations">Presentations</button>
           <button class="tab-btn" data-tab="education">Education</button>
+          <button class="tab-btn" data-tab="awards">Awards & Honors</button>
           <button class="tab-btn" data-tab="skills">Skills</button>
         </nav>
 
@@ -1187,6 +1188,42 @@
           <h3>B.S., Aerospace Engineering</h3>
           <div class="sub">Georgia Institute of Technology</div>
           <div class="sub">2016–2020</div>
+            </div>
+          </section>
+
+          <!-- Awards & Honors Tab -->
+          <section id="awards" class="tab-content">
+            <h2 class="section-title">Awards & Honors</h2>
+            
+            <div class="item">
+              <h3>1st Place ASHRAE Region IV Student Summit</h3>
+              <div class="sub">Winning gold for our work on building portfolio LLM integration</div>
+              <div class="sub">Nov 2025</div>
+              <button class="toggle-btn" onclick="toggleDetails(this)">
+                More info ▼
+              </button>
+              <div class="details" style="display: none">
+                <p class="description">
+                  <ul>
+                    <li>
+                      Won $5000 for our work on building portfolio LLM integration to a panel of industry HVACR experts.
+                    </li>
+                    <li>
+                      My work uses <a href="#cake">CAKE</a> to contribute external geospatial data to the LLM-powered building portfolio analysis tool, integrating diverse data sources (NLCD, Census, Microsoft Building Footprint, Zoning, Tree Canopy, etc.) to provide contextual building insights.
+                    </li>
+                    <li>
+                      My work was part of a larger effort to develop a LLM-integrated platform for building portfolio managers to analyze thousands of buildings using natural language queries. It includes an automated tagging and compliance detection system that achieves 70%+ accuracy on synthetic datasets, enabling identification of retrofit opportunities, policy compliance gaps, and funding eligibility.
+                    </li>
+                  </ul>
+                </p>
+                <div class="tags">
+                  <span class="tag">Python</span>
+                  <span class="tag">GeoPandas</span>
+                  <span class="tag">LLM</span>
+                  <span class="tag">Building Portfolio</span>
+                  <span class="tag">ASHRAE Region IV Student Summit</span>
+                </div>
+              </div>
             </div>
           </section>
 
