--- a/index.html
+++ b/index.html
@@ -668,10 +668,13 @@
               </li>
             </ul>
             <div class="tags">
+              <span class="tag">GIS</span>
               <span class="tag">Python</span>
+              <span class="tag">GeoPandas</span>
               <span class="tag">Pandas</span>
               <span class="tag">H3</span>
               <span class="tag">xarray</span>
+              <span class="tag">ArcGIS Pro</span>
             </div>
           </div>
         </div>
@@ -694,10 +697,13 @@
               </li>
             </ul>
             <div class="tags">
+              <span class="tag">GIS</span>
               <span class="tag">Python</span>
+              <span class="tag">GeoPandas</span>
               <span class="tag">Pandas</span>
               <span class="tag">H3</span>
               <span class="tag">xarray</span>
+              <span class="tag">ArcGIS Pro</span>
             </div>
           </div>
         </div>
@@ -721,10 +727,12 @@
               </li>
             </ul>
             <div class="tags">
+              <span class="tag">GIS</span>
               <span class="tag">Python</span>
+              <span class="tag">GeoPandas</span>
               <span class="tag">Pandas</span>
+              <span class="tag">ArcGIS Pro</span>
               <span class="tag">H3</span>
-              <span class="tag">xarray</span>
             </div>
           </div>
             </div>
@@ -1164,8 +1172,62 @@
                 from KENTECH.
               </li>
             </ul>
-          </div>
+            <div class="tags">
+              <span class="tag">AI</span>
             </div>
+          </div>
+        </div>
+
+        <div class="item">
+          <h3>
+            From Deployment to Utility: Harnessing Your Digital Twin
+          </h3>
+          <div class="sub">2024 ASHRAE CIDCO</div>
+          <div class="sub">June 2024 • Indianapolis, IN</div>
+          <button class="toggle-btn" onclick="toggleDetails(this)">
+            More info ▼
+          </button>
+          <div class="details" style="display: none">
+            <ul>
+              <li>
+                The presentation focuses on how a real-time digital twin can enhance building control methodologies through the integration of the Building Energy Model (BEM) and the Building Automation System (BAS).  In this case study, particular emphasis was placed on the establishment of an ontologically and semantically complete data repository, referred to as a "data lake", combined with a data validation framework.  While traditional building control is set around maintaining setpoints or schedules, BEM-BAS based control can opt for a more holistic approach by incorporating equipment models and data-driven methods, enabling proactive monitoring of both data integrity and key building performance metrics.
+              </li>
+            </ul>
+            <div class="tags">
+              <span class="tag">ASHRAE</span>
+              <span class="tag">Digital Twin</span>
+              <span class="tag">BEM</span>
+              <span class="tag">BAS</span>
+              <span class="tag">Data Lake</span>  
+            </div>
+          </div>
+        </div>
+
+        <div class="item">
+          <h3>
+            A Digital Twin Approach for District Energy Systems
+          </h3>
+          <div class="sub">2024 ASHRAE CIDCO</div>
+          <div class="sub">June 2024 • Indianapolis, IN</div>
+          <button class="toggle-btn" onclick="toggleDetails(this)">
+            More info ▼
+          </button>
+          <div class="details" style="display: none">
+            <ul>
+              <li>
+                This presentation features a case study on the development, implementation, and utility of a digital twin for the district energy system at Georgia Institute of Technology.  The team used Geographic Information System (GIS) to map the infrastructure of the chilled water system and then imported that into a physics-based model. Using python scripts and interval data from the BAS, each building's data including additional parameters such as return temperature and cooling power requirements are incorporated. Currently, the model solves over 75,000 ordinary differential equations to calculate critical parameters such as chilled water temperatures, mass flow requirements, and hydro pressure requirements. The digital twin serves as an accurate representation of Georgia Tech's district energy system, offering insights into system performance, optimizing energy usage, and enhancing overall sustainability.
+              </li>
+            </ul>
+            <div class="tags">
+              <span class="tag">ASHRAE</span>
+              <span class="tag">Digital Twin</span>
+              <span class="tag">GIS</span>
+              <span class="tag">Modelica</span>
+              <span class="tag">Python</span>
+              <span class="tag">BEM</span>
+            </div>
+          </div>
+        </div>
 
             <!-- Add more entries here following the same format -->
           </section>
@@ -1219,9 +1281,28 @@
                 <div class="tags">
                   <span class="tag">Python</span>
                   <span class="tag">GeoPandas</span>
+                  <span class="tag">AI</span>
                   <span class="tag">LLM</span>
                   <span class="tag">Building Portfolio</span>
-                  <span class="tag">ASHRAE Region IV Student Summit</span>
+                  <span class="tag">ASHRAE</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <h3>Founding Member - Georgia Tech ASHRAE Student Charter</h3>
+              <div class="sub">American Society of Heating, Refrigerating and Air-Conditioning Engineers</div>
+              <div class="sub">Spring 2026</div>
+              <button class="toggle-btn" onclick="toggleDetails(this)">
+                More info ▼
+              </button>
+              <div class="details" style="display: none">
+                <p class="description">
+                  Invited to serve as a founding member of Georgia Tech's newly established 
+                  ASHRAE student chapter. This honor recognizes students who demonstrate commitment to advancing HVAC&R education, research, and professional development on campus.
+                </p>
+                <div class="tags">
+                  <span class="tag">ASHRAE</span>
                 </div>
               </div>
             </div>
