--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- Filter Toggle Button -->
     <button
       id="filter-toggle-btn"
-      class="filter-toggle-btn"
+      class="filter-toggle-btn hidden"
       aria-label="Toggle tag filter"
     >
       <svg
@@ -116,7 +116,7 @@
     <!-- Theme Toggle Button -->
     <button
       id="theme-toggle-btn"
-      class="theme-toggle-btn"
+      class="theme-toggle-btn hidden"
       aria-label="Toggle light/dark mode"
       title="Toggle light/dark mode"
     >
@@ -157,7 +157,7 @@
     <!-- Width Toggle Button -->
     <button
       id="width-toggle-btn"
-      class="width-toggle-btn"
+      class="width-toggle-btn hidden"
       aria-label="Toggle layout width"
       title="Toggle narrow/wide layout"
     >
@@ -176,7 +176,7 @@
       <span>Wide</span>
     </button>
 
-    <div class="wrap">
+    <div class="wrap cv-hidden">
       <!-- General Content: Profile information -->
       <header class="general-content">
         <div class="avatar">A</div>
@@ -240,10 +240,31 @@
                     d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
                   /></svg></a
             ></span>
+            <button
+              id="see-cv-btn"
+              class="chip see-cv-btn"
+              title="View full CV"
+            >
+              <svg
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                style="vertical-align: middle"
+              >
+                <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+              </svg>
+              <span style="margin-left: 6px">See CV</span>
+            </button>
             <a
               href="assets/TEST_CV.pdf"
               download
-              class="chip download-cv-btn"
+              class="chip download-cv-btn hidden"
               title="Download CV as PDF"
             >
               <svg
@@ -268,7 +289,7 @@
       </header>
 
       <!-- Tab Layout Container -->
-      <div class="tab-container">
+      <div class="tab-container cv-hidden">
         <!-- Vertical Tabs -->
         <nav class="vertical-tabs">
           <button class="tab-btn active" data-tab="about">About</button>
@@ -1418,7 +1439,7 @@
       </div>
 
       <!-- Footer: Copyright and attribution -->
-      <footer>
+      <footer class="hidden">
         © <span id="y"></span> Adrian Mungroo • Built very carefully...
       </footer>
     </div>
