--- a/index.html
+++ b/index.html
@@ -94,87 +94,90 @@
       </div>
     </div>
 
-    <!-- Filter Toggle Button -->
-    <button
-      id="filter-toggle-btn"
-      class="filter-toggle-btn hidden"
-      aria-label="Toggle tag filter"
-    >
-      <svg
-        width="20"
-        height="20"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="2"
+    <!-- Control Buttons Group -->
+    <div class="control-buttons hidden">
+      <!-- Theme Toggle Button -->
+      <button
+        id="theme-toggle-btn"
+        class="theme-toggle-btn"
+        aria-label="Toggle light/dark mode"
+        title="Toggle light/dark mode"
       >
-        <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
-      </svg>
-      <span>Filter</span>
-    </button>
+        <svg
+          class="sun-icon"
+          width="18"
+          height="18"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <circle cx="12" cy="12" r="5"></circle>
+          <line x1="12" y1="1" x2="12" y2="3"></line>
+          <line x1="12" y1="21" x2="12" y2="23"></line>
+          <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+          <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+          <line x1="1" y1="12" x2="3" y2="12"></line>
+          <line x1="21" y1="12" x2="23" y2="12"></line>
+          <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+          <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+        </svg>
+        <svg
+          class="moon-icon"
+          width="18"
+          height="18"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          style="display: none"
+        >
+          <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+        </svg>
+        <span>Dark</span>
+      </button>
 
-    <!-- Theme Toggle Button -->
-    <button
-      id="theme-toggle-btn"
-      class="theme-toggle-btn hidden"
-      aria-label="Toggle light/dark mode"
-      title="Toggle light/dark mode"
-    >
-      <svg
-        class="sun-icon"
-        width="20"
-        height="20"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="2"
+      <!-- Width Toggle Button -->
+      <button
+        id="width-toggle-btn"
+        class="width-toggle-btn"
+        aria-label="Toggle layout width"
+        title="Toggle narrow/wide layout"
       >
-        <circle cx="12" cy="12" r="5"></circle>
-        <line x1="12" y1="1" x2="12" y2="3"></line>
-        <line x1="12" y1="21" x2="12" y2="23"></line>
-        <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-        <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-        <line x1="1" y1="12" x2="3" y2="12"></line>
-        <line x1="21" y1="12" x2="23" y2="12"></line>
-        <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-        <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-      </svg>
-      <svg
-        class="moon-icon"
-        width="20"
-        height="20"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="2"
-        style="display: none"
-      >
-        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-      </svg>
-      <span>Dark</span>
-    </button>
+        <svg
+          width="18"
+          height="18"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <rect x="3" y="3" width="18" height="18" rx="2"></rect>
+          <line x1="9" y1="3" x2="9" y2="21"></line>
+          <line x1="15" y1="3" x2="15" y2="21"></line>
+        </svg>
+        <span>Wide</span>
+      </button>
 
-    <!-- Width Toggle Button -->
-    <button
-      id="width-toggle-btn"
-      class="width-toggle-btn hidden"
-      aria-label="Toggle layout width"
-      title="Toggle narrow/wide layout"
-    >
-      <svg
-        width="20"
-        height="20"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="2"
+      <!-- Filter Toggle Button -->
+      <button
+        id="filter-toggle-btn"
+        class="filter-toggle-btn"
+        aria-label="Toggle tag filter"
       >
-        <rect x="3" y="3" width="18" height="18" rx="2"></rect>
-        <line x1="9" y1="3" x2="9" y2="21"></line>
-        <line x1="15" y1="3" x2="15" y2="21"></line>
-      </svg>
-      <span>Wide</span>
-    </button>
+        <svg
+          width="18"
+          height="18"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
+        </svg>
+        <span>Filter</span>
+      </button>
+    </div>
 
     <div class="wrap cv-hidden">
       <!-- General Content: Profile information -->
