save button to filters

--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
           <span class="mode-badge none-mode">NONE</span> = exclude all
         </div>
         <div id="tag-list" class="tag-list"></div>
+        <button id="save-filters-btn" class="save-filters-btn">
+          Save
+        </button>
         <button id="clear-filters-btn" class="clear-filters-btn">
-          Clear All
+          Clear
         </button>
       </div>
     </div>
