--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         </h3>
         <ul class="focus-list">
           <li>
-            <a href="#power-outage">Georgia Power Outage spatio-temporal analysis</a>
+            <a href="#power-outage">Power Outage spatio-temporal analysis</a>
           </li>
           <li>
             <a href="#movement-model">Georgia Tech Campus network movement model and analysis</a>
@@ -636,7 +636,7 @@
             <h2 class="section-title">Independent Research & Development</h2>
 
             <div class="item" id="power-outage">
-              <h3>Georgia Power Outage Spatio-temporal Analysis</h3>
+              <h3>Power Outage Spatio-Temporal Analysis</h3>
               <div class="sub">Nov 2024 - Present • Atlanta, GA</div>
               <button class="toggle-btn" onclick="toggleDetails(this)">
                 More info ▼
@@ -644,17 +644,17 @@
               <div class="details" style="display: none">
                 <ul>
                   <li>
-                    Collected power outage data every 15 minutes from November 2024.
+                    Collected outage data from 2024 onwards from public sources.
                   </li>
-                  <li>Calculated outage duration for each outage event.</li>
+                  <li>
+                    Calculated outage duration for each outage event.
+                  </li>
                   <li>
                     Used <a href="#cake">CAKE</a> to bin the outages into
-                    hexagon areas roughly the size of a neighborhood, maintaining
-                    the ability to track local outages over time per hexagon.
+                    hexagon areas roughly the size of a neighborhood.
                   </li>
                   <li>
-                    Incorporated many external datasets such as socioeconomic data,
-                    weather data, and building data to facilitate comprehensive
+                    Incorporated external GIS datasets such as socioeconomic vulnerability data, weather data, and building data to facilitate comprehensive
                     analysis.
                   </li>
                   <li>
@@ -665,7 +665,7 @@
                   </li>
                   <li>
                     Performed time series analysis to identify if outages occur
-                    sooner or later in the particular neighborhoods.
+                    sooner or later conditional on extraneous factors.
                   </li>
                 </ul>
                 <div class="tags">
