copy-to-clipboard email button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         ]
       }
     </script>
+  <style>.toast.show{opacity:1!important}</style>
   </head>
 
   <body>
@@ -194,11 +195,9 @@
           </div>
           <div class="meta">
             <span class="chip">Atlanta, GA</span>
-            <span class="chip"
-              ><a
-                href="mailto:amungroo3@gatech.edu"
-                title="amungroo3@gatech.edu"
-                ><svg
+            <span class="chip" style="cursor:pointer;position:relative;color:var(--accent)" onclick="navigator.clipboard.writeText('amungroo3@gatech.edu').then(()=>{const t=this.querySelector('.toast');t.classList.add('show');setTimeout(()=>t.classList.remove('show'),1500)})"
+              title="Copy email"
+              ><svg
                   width="18"
                   height="18"
                   viewBox="0 0 24 24"
@@ -210,8 +209,7 @@
                   style="vertical-align: middle"
                 >
                   <rect x="2" y="4" width="20" height="16" rx="2" />
-                  <path d="m2 7 10 7 10-7" /></svg></a
-            ></span>
+                  <path d="m2 7 10 7 10-7" /></svg><span class="toast" style="position:absolute;bottom:120%;left:50%;transform:translateX(-50%);background:#333;color:#fff;padding:4px 10px;border-radius:6px;font-size:12px;white-space:nowrap;opacity:0;pointer-events:none;transition:opacity .25s">Copied!</span></span>
             <span class="chip"
               ><a
                 href="https://github.com/adrianmungroo"
