--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
             <h2 class="section-title">Experience</h2>
         <div class="timeline">
           <div class="timeline-item">
-            <h3>Graduate Researcher - Spatial & Statistical Data Analytics</h3>
+            <h3>Graduate Researcher - Spatial Data Analytics</h3>
             <div class="sub">
-              Georgia Institute of Technology — Smart Campus
+              Aerospace Systems Design Laboratory — Energy Infrastructure and Data Engineering
             </div>
             <div class="sub">2022–Present • Atlanta, GA</div>
             <button class="toggle-btn" onclick="toggleDetails(this)">
@@ -535,7 +535,7 @@
           <div class="timeline-item">
             <h3>Undergraduate Researcher</h3>
             <div class="sub">
-              Georgia Institute of Technology — Hyperloop GT HERMES
+              Aerospace Systems Design Laboratory — Hyperloop GT HERMES
             </div>
             <div class="sub">2018–2020 • Atlanta, GA</div>
             <button class="toggle-btn" onclick="toggleDetails(this)">
@@ -570,7 +570,7 @@
           <div class="timeline-item">
             <h3>Undergraduate Researcher</h3>
             <div class="sub">
-              Georgia Tech Martian Advanced Renewable Systems (M.A.R.S)
+              Vertically Integrated Projects — Martian Advanced Renewable Systems (M.A.R.S)
             </div>
             <div class="sub">2017–2018 • Atlanta, GA</div>
             <button class="toggle-btn" onclick="toggleDetails(this)">
